crates/data-dict/tests/snapshots/validate_spec__s17_multiple_keys.snap
---
source: crates/data-dict/tests/validate_spec.rs
---
$version: "0.1.0"
$learn_more: http://data-dict.tidyverse.org/
version:
  date: 2024-01-31
  hash: a1b2c3d
в”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђ
error: [S17] A `version` must give exactly one of `number`, `date`, or `hash`.
 --> dict.yaml:5:3
  |
3 | version:
4 |   date: 2024-01-31
5 |   hash: a1b2c3d
  |   ^^^^ `date` has already been supplied
